contrib/platiagro/projects/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: projects
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /projects/apis/
    rewrite:
      uri: /
    route:
    - destination:
        host: $(PROJECTS_SERVICE).$(PROJECTS_NAMESPACE).svc.cluster.local
        port:
          number: 8080
    timeout: 300s
